--- a/src/Autumn.Web.Host/appsettings.Production.json
+++ b/src/Autumn.Web.Host/appsettings.Production.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "ConnectionStrings": {
     "Default": "Data Source=tcp:autumnscv.database.windows.net,1433;Initial Catalog=autumnscvdb;User Id=autumnadmin@autumnscv.database.windows.net;Password=Welcome1;"
   },
   "App": {
-    "ServerRootAddress": "https://autumnscv.azurewebsites.net/",
-    "ClientRootAddress": "https://autumnscv.azurewebsites.net/",
-    "CorsOrigins": "https://autumnscv.azurewebsites.net"
+    "ServerRootAddress": "http://localhost:22742",
+    "ClientRootAddress": "http://localhost:4200",
+    "CorsOrigins": "http://localhost:4200"
   }
 }
