--- a/src/Autumn.Web.Host/appsettings.json
+++ b/src/Autumn.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=WAILAP12\\SQLEXPRESS; Database=AutumnDb; Trusted_Connection=True;"
+    "Default": "Server=WAIPLA-62\\SQLEXPRESS; Database=AutumnDb11; Trusted_Connection=True;"
   },
   "AbpZeroLicenseCode": "00INy5E/niZtpMSffS6qLcGw==aefdd7d75aa6ec969c2b203eff91c654",
   "Abp": {
